--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   <section>
     <h2>Things I Like</h2>
     <ul>
-      <li>Fill</li>
-      <li>This</li>
-      <li>In</li>
+      <li>Architecture</li>
+      <li>Pottery</li>
+      <li>History</li>
     </ul>
   </section>
 
